fix: security configuration